MDEV-7260: Crash in get_best_combination when executing multi-table UPDATE with nested views

Do not use merge_for_insert for commands which use SELECT because optimizer can't work with such tables.

Fixes which makes multi-delete working with normally merged views.